--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
+<%- include partials/navbar %>
 <div class="main-container">
-  <%- include partials/navbar %>
+  <h1>Welcome to IronFack</h1>
   <div class="post-container">
     <% post.forEach(post => { %>
     <div class="post">
