--- a/views/posts/newpost.ejs
+++ b/views/posts/newpost.ejs
@@ -1,3 +1,4 @@
+<%- include ../partials/navbar %>
 <form action="/post/new" method="post">
   <div class="new-post-header">
     <p class="new-post-title">New post</p>
