--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,26 +1,24 @@
-<div class="burger"></div>
-<div class="navbar">
-<div class="nav-container">
-  <div>
-    <img src="<%= currentUser.avatar %>">
+<div >
+  <div class="navbar">
+    <div class="nav-elements">
+      <img class="nav-avatar" src="<%= currentUser.avatar %>">
+    </div>
+    <div class="nav-elements">
+      <img class="nav-logo-image" src="/images/ironLogo-block.png" alt="logo-iron-fack">
+    </div>
+    <div class="menu nav-elements">
+      <i class="fas fa-bars"></i>
+    </div> 
   </div>
-  <div>
-    <img class="nav-logo-image" src="/images/ironLogo-block.png" alt="logo-iron-fack">
-  </div>
-  
-  <div class="menu">
-  <i class="fas fa-bars"></i>
-  </div>
-  <!--
-  <div>
-    <h2><%= currentUser.username %></h2>
-  </div>
-  <a href="/auth/logout">Logout</a>
+  <div class="navbar-options">
+    <div>
+      <h2>Hi <%= currentUser.username %> !</h2>
+    </div>
     <a href="/post/new">Nueva entrada</a>
     <a href="/profile/<%= currentUser._id %>">Ver tu perfil</a>
     <a href="/profile/<%= currentUser._id %>/edit">Edita tu perfil</a>
-    <div class="nav-close">X</div>
-    -->
+    <a href="/auth/logout">Logout</a>
+    <i class="fas fa-sort-up"></i>
   </div>
 </div>
 
