--- a/views/posts/postdetails.ejs
+++ b/views/posts/postdetails.ejs
@@ -1,20 +1,54 @@
 <div class="post">
     <div>
-        <div class="post-title"> <%= post1.post.title %> </a></div>
+        <div class="post-avatar"><img src="<%= post.author.avatar %>"></div>
+        <div class="post-title"> <%= post.title %> </a></div>
     </div>
     <div class="info-container">
         <p class="main-author">By: </p>
-        <p class="author-link"> <%= post1.post.author.username %> </p>
-        <p class="date"><%= post1.post.date %></p>
+        <p class="author-link"> <%= post.author.username %> </p>
+        <p class="date"><%= post.date %></p>
         <hr>
     </div>
-    <div class="post-text"><%= post1.post.text %></div>
+    <div class="post-text"><%= post.text %></div>
     <hr>
     <div class="post-buttons">
-        <% if(post1.userId == post1.post.author._id){ %>
-            <div><a href="/post/<%= post1.post._id %>/edit">Edit</a></div>
-            <div><a href="/post/<%= post1.post._id %>/delete">Delete</a></div>
+        <% if(currentUser === post.author._id){ %>
+            <div><a href="/post/<%= post._id %>/edit">Edit</a></div>
+            <div><a href="/post/<%= post._id %>/delete">Delete</a></div>
         <% } %>
     </div>
-     <a href="/">Back</a>
+    <div class="post-coment-list">
+        <% if(coments){%>
+            <% coments.forEach(coment => {%>
+                <div class="coment">
+                    <div class="coment-avatar">
+                        <img src="<%= coment.author.avatar %>">
+                    </div>
+                    <div class="coment-container">
+                        <p class="coment-main-author">By: </p>
+                        <p class="coment-author-link"> <%= coment.author.username %> </p>
+                        <p class="coment-date"><%= coment.date %></p>
+                        <hr>
+                    </div>
+                    <div class="coment-text">
+                        <%= coment.coment %>
+                    </div>
+                    <hr>
+                    <div class="coment-buttons">
+                        <button name="button" value="a" id="<%= post._id %>"><span><%= post.hateButtons.buttonA %></span><img src="/images/pizza.png" alt=""></button>
+                        <button name="button" value="b" id="<%= post._id %>"><span><%= post.hateButtons.buttonB %></span><img src="/images/balloon.png" alt=""></button>
+                        <button name="button" value="c" id="<%= post._id %>"><span><%= post.hateButtons.buttonC %></span><img src="/images/baby-cry.png" alt=""></button>
+                        <button name="button" value="d" id="<%= post._id %>"><span><%= post.hateButtons.buttonD %></span><img src="/images/blackboard.png" alt=""></button>
+                    </div>
+                </div>
+            <%})%>
+        <% } %>
+    </div>
+    <div class="post-coment">
+    <form action="/post/<%= post._id %>/coment" method="post">
+        <label for="coment">Comenta:</label>
+        <textarea name="coment"></textarea>
+        <input type="submit" value="Comentar!">
+    </form>
+    </div>
   </div>
