--- a/views/posts/postdetails.ejs
+++ b/views/posts/postdetails.ejs
@@ -1,6 +1,6 @@
 <div class="post">
-    <div>
-        <div class="post-avatar"><img src="<%= post.author.avatar %>"></div>
+    <div class="index-post-section">
+        <div><img class="post-avatar" src="<%= post.author.avatar %>"></div>
         <div class="post-title"> <%= post.title %> </a></div>
     </div>
     <div class="info-container">
