--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -1,3 +1,4 @@
+<%- include partials/navbar %>
 <div class="profile">
   <img src="<%= user.avatar %>">
   <h1 class="username"><%= user.username %></h1>
