--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -1,4 +1,8 @@
 <%- include ../partials/navbar %>
+<div class="profile-header">
+  <h1>Profile de <%= user.username %></h1>
+  <a class="new_post_back-button" href="/"> < Back</a>
+</div>
 <div class="profile">
   <img src="<%= user.avatar %>">
   <h1 class="username"><%= user.username %></h1>
