--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -38,6 +38,7 @@ a {
   margin:0 auto;
   text-align:center;
 }
+
 .login input, .login a, .login button{
   display:block;
   margin:5px auto 20px;
@@ -70,6 +71,18 @@ a {
 
 .login-input-field {
   height: 20px;
+  border-radius: 5px;
+  width: 90%
+}
+
+.login-input-field-readonly {
+  height: 20px;
+  border-radius: 5px;
+  width: 90%
+}
+
+.login-input-description-field-readonly {
+  height: 100px;
   border-radius: 5px;
   width: 90%
 }
@@ -113,6 +126,32 @@ a {
   margin: 0 auto;
 }
 
+.newpost-input-textarea {
+  display:block;
+  margin:5px auto 20px;
+  padding:10px;
+  font-size:14px;
+  border:none;
+  outline:none;
+  height: 300px;
+  border-radius: 5px;
+  width: 90%
+}
+
+.newpost-input-textarea:focus {
+  background-color: var(--yellow-cor);
+}
+
+.newpost-login-buton-submit {
+  background-color:var(--azul-buttons-corp);
+  color:white;
+  font-weight: 700;
+  border-radius: 5px;
+  width: 95%;
+  height: 50px;
+  margin-bottom:20px;
+}
+
 .title{
   font-family: 'Roboto';
   font-weight: 900;
@@ -125,6 +164,7 @@ a {
   width:200px;
   height:140px;
 }
+
 .title span{
   display:block;
   font-weight: 100;
@@ -147,6 +187,7 @@ a {
   display: flex;
   flex-flow: column-reverse;
 }
+
 .post{
   font-size:16px;
   background:var(--blanco);
@@ -239,7 +280,6 @@ a {
   width: 25px;
 }
 
-
 .post-buttons button{
   border:none;
   background:none;
@@ -329,7 +369,21 @@ a {
 
 
 /** ---- Profile ---- **/
-.profile{
+.profile-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.profile-img {
+  padding-top: 50px;
+  width: 150px;
+  height: 150px;
+}
+
+/* .profile{
   text-align:center;
   width:80%;
   background:var(--blanco);
@@ -339,13 +393,6 @@ a {
   border-radius:4px;
 }
 
-.profile-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-}
 
 .profile-header h1{
   font-size: 30px;
@@ -353,7 +400,7 @@ a {
 
 .profile img{
   width:30%;
-}
+} */
 
 /** -- New Post --**/
 .new-post-header {
@@ -402,6 +449,7 @@ a {
 }
 
 .post-text-area {
+  padding-top: 30px;
   display: flex;
   flex-direction: column;
   width: 90%;
@@ -424,7 +472,7 @@ a {
   margin-top: 30px;
 }
 
-.new-post-button-submit {
+/* .new-post-button-submit {
   border: 1px solid rgb(42, 100, 225);
   border-radius: 10px;
   background-color: rgb(42, 100, 225);
@@ -433,7 +481,7 @@ a {
   margin: 40px auto;
   text-align: center;
   padding: 10px;
-}
+} */
 
 
 
