--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -18,7 +18,7 @@
     <a href="/profile/<%= currentUser._id %>">Ver tu perfil</a>
     <a href="/profile/<%= currentUser._id %>/edit">Edita tu perfil</a>
     <a href="/auth/logout">Logout</a>
-    <i class="fas fa-sort-up"></i>
+    <i class="fas fa-sort-up close"></i>
   </div>
 </div>
 
