--- a/views/posts/postdetails.ejs
+++ b/views/posts/postdetails.ejs
@@ -35,10 +35,10 @@
                     </div>
                     <hr>
                     <div class="coment-buttons">
-                        <button name="button" value="a" id="<%= post._id %>"><span><%= post.hateButtons.buttonA %></span><img src="/images/pizza.png" alt=""></button>
-                        <button name="button" value="b" id="<%= post._id %>"><span><%= post.hateButtons.buttonB %></span><img src="/images/balloon.png" alt=""></button>
-                        <button name="button" value="c" id="<%= post._id %>"><span><%= post.hateButtons.buttonC %></span><img src="/images/baby-cry.png" alt=""></button>
-                        <button name="button" value="d" id="<%= post._id %>"><span><%= post.hateButtons.buttonD %></span><img src="/images/blackboard.png" alt=""></button>
+                        <button name="button" value="a" id="<%= coment._id %>"><span><%= coment.hateButtons.buttonA %></span><img src="/images/pizza.png" alt=""></button>
+                        <button name="button" value="b" id="<%= coment._id %>"><span><%= coment.hateButtons.buttonB %></span><img src="/images/balloon.png" alt=""></button>
+                        <button name="button" value="c" id="<%= coment._id %>"><span><%= coment.hateButtons.buttonC %></span><img src="/images/baby-cry.png" alt=""></button>
+                        <button name="button" value="d" id="<%= coment._id %>"><span><%= coment.hateButtons.buttonD %></span><img src="/images/blackboard.png" alt=""></button>
                     </div>
                 </div>
             <%})%>
@@ -51,4 +51,25 @@
         <input type="submit" value="Comentar!">
     </form>
     </div>
-  </div>
+</div>
+
+<script src="/javascripts/axios.js"></script>
+<script>
+  const buttons = document.querySelectorAll('button');
+
+    buttons.forEach(button => {
+      button.addEventListener('click', (event) => {
+        axios.post('/api/coment/likes', {
+          postId: `${button.id}`,
+          button: `${button.value}`
+        })
+          .then(({ data }) => {
+            const span = button.querySelector('span')
+            span.innerHTML = data
+          })
+          .catch(error => {
+            console.log(error);
+          })
+      })
+    })
+</script>
