--- a/views/posts/postdetails.ejs
+++ b/views/posts/postdetails.ejs
@@ -1,55 +1,64 @@
-<div class="post">
-    <div class="index-post-section">
-        <div><img class="post-avatar" src="<%= post.author.avatar %>"></div>
-        <div class="post-title"> <%= post.title %> </a></div>
+<%- include ../partials/navbar %>
+<div class="main-container">
+    <div class="profile-header">
+        <h1>Post detail</h1>
+        <a class="new_post_back-button" href="/"> < Back</a>
     </div>
-    <div class="info-container">
-        <p class="main-author">By: </p>
-        <p class="author-link"> <%= post.author.username %> </p>
-        <p class="date"><%= post.date %></p>
+    <div class="postdetail">
+        <div class="index-post-section">
+            <div><img class="post-avatar" src="<%= post.author.avatar %>"></div>
+            <div class="post-title"> <%= post.title %> </a></div>
+        </div>
+        <div class="info-container">
+            <p class="main-author">By: </p>
+            <p class="author-link"> <%= post.author.username %> </p>
+            <p class="date"><%= post.date %></p>
+            <hr>
+        </div>
+        <div class="post-text"><%= post.text %></div>
         <hr>
-    </div>
-    <div class="post-text"><%= post.text %></div>
-    <hr>
-    <div class="post-buttons">
-        <% if(currentUser === post.author._id){ %>
-            <div><a href="/post/<%= post._id %>/edit">Edit</a></div>
-            <div><a href="/post/<%= post._id %>/delete">Delete</a></div>
-        <% } %>
-    </div>
-    <div class="post-coment-list">
-        <% if(coments){%>
-            <% coments.forEach(coment => {%>
-                <div class="coment">
-                    <div class="coment-avatar">
-                        <img src="<%= coment.author.avatar %>">
-                    </div>
-                    <div class="coment-container">
-                        <p class="coment-main-author">By: </p>
-                        <p class="coment-author-link"> <%= coment.author.username %> </p>
-                        <p class="coment-date"><%= coment.date %></p>
+        <div class="post-buttons">
+            <% if(currentUser === post.author._id){ %>
+                <div><a href="/post/<%= post._id %>/edit">Edit</a></div>
+                <div><a href="/post/<%= post._id %>/delete">Delete</a></div>
+            <% } %>
+        </div>
+        <div class="post-coment-list">
+            <% if(coments){%>
+                <% coments.forEach(coment => {%>
+                    <div class="coment">
+                        <div class="coment-avatar">
+                            <img src="<%= coment.author.avatar %>">
+                        </div>
+                        <div class="coment-container">
+                            <p class="coment-main-author">By: </p>
+                            <p class="coment-author-link"> <%= coment.author.username %> </p>
+                            <p class="coment-date"><%= coment.date %></p>
+                            <hr>
+                        </div>
+                        <div class="coment-text">
+                            <%= coment.coment %>
+                        </div>
                         <hr>
+                        <div class="coment-buttons">
+                            <button name="button" value="a" id="<%= coment._id %>"><span><%= coment.hateButtons.buttonA %></span><img src="/images/pizza.png" alt=""></button>
+                            <button name="button" value="b" id="<%= coment._id %>"><span><%= coment.hateButtons.buttonB %></span><img src="/images/balloon.png" alt=""></button>
+                            <button name="button" value="c" id="<%= coment._id %>"><span><%= coment.hateButtons.buttonC %></span><img src="/images/baby-cry.png" alt=""></button>
+                            <button name="button" value="d" id="<%= coment._id %>"><span><%= coment.hateButtons.buttonD %></span><img src="/images/blackboard.png" alt=""></button>
+                        </div>
                     </div>
-                    <div class="coment-text">
-                        <%= coment.coment %>
-                    </div>
-                    <hr>
-                    <div class="coment-buttons">
-                        <button name="button" value="a" id="<%= coment._id %>"><span><%= coment.hateButtons.buttonA %></span><img src="/images/pizza.png" alt=""></button>
-                        <button name="button" value="b" id="<%= coment._id %>"><span><%= coment.hateButtons.buttonB %></span><img src="/images/balloon.png" alt=""></button>
-                        <button name="button" value="c" id="<%= coment._id %>"><span><%= coment.hateButtons.buttonC %></span><img src="/images/baby-cry.png" alt=""></button>
-                        <button name="button" value="d" id="<%= coment._id %>"><span><%= coment.hateButtons.buttonD %></span><img src="/images/blackboard.png" alt=""></button>
-                    </div>
-                </div>
-            <%})%>
-        <% } %>
-    </div>
-    <div class="post-coment">
-    <form action="/post/<%= post._id %>/coment" method="post">
-        <label for="coment">Comenta:</label>
-        <textarea name="coment"></textarea>
-        <input type="submit" value="Comentar!">
-    </form>
+                <%})%>
+            <% } %>
+        </div>
+        <div class="post-coment">
+            <div class="login-form">
+                <form action="/post/<%= post._id %>/coment" method="post">
+                    <label for="coment">Comenta:</label>
+                    <textarea name="coment"></textarea>
+                    <input type="submit" value="Comentar!">
+                </form>
+            </div>
+        </div>
     </div>
 </div>
 
