--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <%- include partials/navbar %>
 <div class="main-container">
   <h1>Welcome to IronFack</h1>
+  <%- include partials/errors %>
   <div class="post-container">
     <% post.forEach(post => { %>
     <div class="post">
