--- a/views/layout/layout.ejs
+++ b/views/layout/layout.ejs
@@ -5,7 +5,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HaterHack</title>
+    <title>IronFack</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700,900&amp;subset=latin-ext" rel="stylesheet">
   </head>
