--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -187,7 +187,11 @@ select {
   font-weight: 100;
 }
 
-
+.info{
+  text-align:center;
+  font-size:16px;
+  color:var(--azul-buttons-corp);
+}
 /** ---- main ---- */
 .main-container{
   margin-top: 100px;
@@ -236,10 +240,12 @@ select {
 .index-post-avatar {
   width: 40px;
   height: 40px; 
-  margin-right: 20px
+  margin-right: 20px;
+  border-radius:50%;
 }
 
 .post-avatar {
+  border-radius:50%;
   width: 40px;
   height: 40px; 
   margin-right: 20px
@@ -248,7 +254,8 @@ select {
 .coment-avatar {
   width: 40px;
   height: 40px; 
-  margin-right: 20px 
+  margin-right: 20px;
+  border-radius:50%;
 }
 
 .post-title a{
@@ -261,10 +268,12 @@ select {
   font-size: 25px;
   text-decoration: none;
 }
-
-.post .info-container {
-  margin-bottom: 20px;
-  margin-top: 5px;
+.info-container img{
+  height:12px;
+  padding-right:10px;
+}
+.coment-lenght{
+  text-align:right;
 }
 
 .post .main-author {
@@ -282,11 +291,17 @@ select {
   font-size: 13px;
   margin-right: 5px;
   margin-bottom: 5px;
-  color: rgb(60, 80, 80)
+  color: var(--azul-cor);
+  display:flex;
+  justify-content: space-around;
+  margin-top: 5px;
+}
+.info-container p{
+  display:block;
 }
 
 .post-text{
-  margin-bottom: 30px;
+  margin: 20px 0;
 }
 
 .post-buttons{
@@ -352,6 +367,7 @@ select {
 
 .nav-avatar {
   height: 50px;
+  border-radius:50%;
 }
 
 .nav-logo-image {
