--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
         <div class="post-title"><a href="/post/<%= post._id %>"><%= post.title %></a></div>
       </div>
       <div class="info-container">
-        <p class="main-author">By: <a class="author-link" href="/profile/<%= post.author._id%>"><%= post.author.username%></a></p>
+        <p class="main-author">Por: <a class="author-link" href="/profile/<%= post.author._id%>"><%= post.author.username%></a></p>
         <p ><%= post.date %> </p>
         <p>
         <span class="coment-lenght"><img class="coment-img" src="/images/chat.png" alt=""><%= post.comentNumber %></span>
