--- a/views/posts/newpost.ejs
+++ b/views/posts/newpost.ejs
@@ -2,13 +2,13 @@
 <div class="main-container">
   <div class="login">
     <div class="profile-header">
-      <h1>New post</h1>
-      <a class="new_post_back-button" href="/"> < Back</a>
+      <h1>Post nuevo</h1>
+      <a class="new_post_back-button" href="/"> < Volver</a>
     </div>
     <div class="login-form">
       <form action="/post/new" method="post">
-        <input class="login-input-field" type="text" placeholder="Title" name="title">
-        <textarea class="newpost-input-textarea" placeholder="Spread the hate here..." name="text"></textarea>
+        <input class="login-input-field" type="text" placeholder="Título" name="title">
+        <textarea class="newpost-input-textarea" placeholder="Esparcir odio aquí..." name="text"></textarea>
         <%- include ../partials/errors.ejs %>
         <button class="newpost-login-buton-submit" type="submit">Post</button>
       </form>
