--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -1,8 +1,8 @@
 <%- include ../partials/navbar %>
 <div class="main-container">
   <div class="profile-header">
-    <h1>Profile de <%= user.username %></h1>
-    <a class="new_post_back-button" href="/"> < Back</a>
+    <h1>Perfil de <%= user.username %></h1>
+    <a class="new_post_back-button" href="/"> < Volver</a>
   </div>
   <div class="login">
     <img class="profile-img" src="<%= user.avatar %>">
