--- a/views/posts/editpost.ejs
+++ b/views/posts/editpost.ejs
@@ -1,11 +1,18 @@
 <%- include ../partials/navbar %>
 <div class="main-container">
-  <form action="/post/<%= post._id %>/edit" method="post">
-    <label for="title">Título</label>
-    <input type="text" value="<%= post.title %>" name="title">
-    <label for="text">Text</label>
-    <textarea name="text"> <%= post.text %> </textarea>
-    <input type="submit" value="Llorar">
-    <a href="/post/<%= post._id %>">Back</a>
-  </form>
+<div class="login">
+  <div class="profile-header">
+    <h1>Edit post</h1>
+    <a class="new_post_back-button" href="/"> < Volver</a>
+  </div>
+  <div class="login-form">
+    <form action="/post/<%= post._id %>/edit" method="post">
+      <input class="login-input-field" type="text" value="<%= post.title %>" name="title">
+      <textarea class="newpost-input-textarea" name="text"> <%= post.text %> </textarea>
+      <!-- <input class="login-input-field" type="submit" value="Llorar"> -->
+      <button class="newpost-login-buton-submit" type="submit">Post</button>
+    </form>
+  </div>
+  
+  </div>
 </div>
