--- a/views/errors/404.ejs
+++ b/views/errors/404.ejs
@@ -1,2 +1,4 @@
-<h1>Error 4004</h1>
-<p>La página que buscas no existe.</p>
+<div class="error">
+  <h1>Error 4004</h1>
+  <p>Si no existe, no existe.</p>
+</div>
