--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,11 +1,11 @@
-<div >
+<div>
   <div class="navbar">
     <div class="nav-container">
       <div class="nav-elements">
         <img class="nav-avatar" src="<%= currentUser.avatar %>">
       </div>
       <div class="nav-elements">
-        <img class="nav-logo-image" src="/images/ironLogo-block.png" alt="logo-iron-fack">
+        <a href="/"><img class="nav-logo-image" src="/images/ironLogo-block.png" alt="logo-iron-fack"></a>
       </div>
       <div class="menu nav-elements">
         <i class="fas fa-bars"></i>
