--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,11 +20,7 @@ body {
   margin: 0;
   padding: 0;
   background-color:var(--negro-cor);
-  /*
-  background-image: linear-gradient(to right bottom, #048cc0, #2999ce, #3ea6dc, #50b3eb, #61c1f9);
-  */
   background-attachment: fixed;
-
   color:var(--blanco);
 }
 
@@ -32,6 +28,12 @@ a {
   color: var(--azul-cor);
 }
 
+h2{
+  text-align:center;
+  color:var(--azul-cor);
+  border-bottom:1px solid var(--azul-buttons-corp);
+  margin:0;
+}
 /* ---- login and register ---- */
 .login{
   width: 100%;
@@ -49,10 +51,19 @@ a {
 }
 
 .profile-link a{
-  display:block;
-  font-size:14px;
-  padding:10px;
-  width: 90%;
+  display:inline-block;
+  font-size:16px;
+  background:var(--azul-cor);
+  color:var(--blanco);
+  padding:5px 10px;
+  margin:10px;
+  border-radius:4px;
+  text-decoration:none;
+}
+.profile-link{
+  width: 80%;
+  margin:0 auto;
+  border-radius:4px;
 }
 
 .post-link-list {
@@ -419,17 +430,22 @@ select {
   margin: 0px 20px;
 }
 
-.navbar-options {
+.navbar-options, .navbar-options input{
   display: flex;
   flex-direction: column;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background:none;
+  border:none;
+  color:var(--gris-cor);
+  font-size:18px!important;
 }
 
 .navbar-options a {
   text-decoration: none;
   color:var(--gris-cor);
+  padding:5px;
   font-size: 20px;
 }
 
