--- a/views/errors/error.ejs
+++ b/views/errors/error.ejs
@@ -1,4 +1,4 @@
 <div class="error">
-<h1>¡<%= status %>!</h1>
-<pre>Algo ha fallado en nuestro servidor, ¡vuélvelo a intentar!</pre>
+  <h1>¡<%= status %>!</h1>
+  <pre>Ya lo has roto.</pre>
 </div>
