--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -38,7 +38,7 @@
         <a href="/post/<%= post._id %>"><%= post.title %></a>
     <% }) %>
     <% } else { %>
-      <p class="login-register-link">El usuario no ha escrito ningún post</p>
+      <p class="login-register-link">El usuario no tiene ningún lloriqueo</p>
     <% } %>
   </div>
 </div>
